refactor: replace FileAnalysisContext with mutable FileAnalysisAccumulator